--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,12 @@
         >Search
       </button>
     </form>
-    <span class="loader visually-hidden"></span>
+
     <section class="content-section">
       <ul class="gallery"></ul>
+      <button class="load-btn visually-hidden">Load more</button>
+      <span class="loader visually-hidden"></span>
+      <span class="page-loader visually-hidden"></span>
     </section>
 
     <script type="module" src="./main.js"></script>
