--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
       <button class="load-btn visually-hidden">Load more</button>
       <span class="loader visually-hidden"></span>
       <span class="page-loader visually-hidden"></span>
+      <p class="thats-all visually-hidden">That's all images</p>
     </section>
 
     <script type="module" src="./main.js"></script>
